<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/layout_margin"
    android:layout_marginTop="@dimen/layout_margin"
    android:layout_marginRight="@dimen/layout_margin"
    android:layout_marginBottom="@dimen/layout_margin"
    android:orientation="vertical"
    android:isScrollContainer="true">

    <TextView
        style="@style/formItem"
        android:gravity="center_vertical"
        android:text="@string/form_FirstName"/>
    <EditText
        style="@style/formItem"
        android:background="@color/fieldBackground"/>
    <TextView
        style="@style/formItem"
        android:gravity="center_vertical"
        android:text="@string/form_LastName"/>
    <EditText
        style="@style/formItem"
        android:background="@color/fieldBackground"/>
    <TextView
        style="@style/formItem"
        android:gravity="center_vertical"
        android:text="@string/form_Age"/>
    <EditText
        style="@style/formItem"
        android:background="@color/fieldBackground"/>
    <TextView
        style="@style/formItem"
        android:gravity="center_vertical"
        android:text="@string/form_DayOfWeek"/>
    <RadioGroup
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <RadioButton
            style="@style/formItem"
            android:text="@string/form_DayOfWeek_Mon"/>
        <RadioButton
            style="@style/formItem"
            android:text="@string/form_DayOfWeek_Wed"/>
        <RadioButton
            style="@style/formItem"
            android:text="@string/form_DayOfWeek_Fri"/>
    </RadioGroup>
    <CheckBox
        style="@style/formItem"
        android:text="@string/form_Terms"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/form_submit"
        android:onClick="login"/>

</LinearLayout>